--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "manakin": "^0.4.7",
     "mocha": "^2.4.5",
     "request": "^2.81.0"
   },
